<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Organizer</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="privacy_policy_underlined"><u>Privacy Policy</u></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="syrian_code" translatable="false">+963</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="upload_id_card_image">Upload ID Card Image</string>
    <string name="does_not_match_password">Does Not Match Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account"><u>Already have an account? Login</u></string>
    <string name="name_does_not_match">Do Not Add Symbols or Numbers.</string>
    <string name="not_a_phone_number">Not a Phone Number</string>
    <string name="email_optional">Email Address (Optional)</string>
    <string name="add_bio">Add Bio</string>
    <string name="not_an_email_address">Not An Email Address</string>
    <string name="bio_dialog">Add Bio (Optional)</string>
    <string name="trips">Trips</string>
    <string name="followers">Followers</string>
    <string name="email">Email</string>
    <string name="type_here">Type Here..</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="active">Active</string>
    <string name="done">Done</string>
    <string name="bio">Bio</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="no_space">Do Not Start With Space</string>
    <string name="empty_field">Field is Empty</string>
    <string name="password_limit">At Least 6 Characters Allowed</string>
    <string name="signup_success_message">Successfully SignedUp! Welcome to DayOut</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="all">All</string>
    <string name="biography">Biography</string>
    <string name="deleting_trip">Are you sure you want to delete this trip?</string>
    <string name="deleting_poll">Are you sure you want to delete this poll?</string>
    <string name="canceling_booking">Are you sure you want to cancel this passenger\'s booking?</string>
    <string-array name="trip_types">
        <item>Any</item>
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
    </string-array>
    <string name="notifications">Notifications</string>
    <string name="trip_rated">Trip Rated!</string>
    <string name="close">Close</string>
    <string name="filter_title">Title:</string>
    <string name="filter_price">Price:</string>
    <string name="filter_type">Type:</string>
    <string name="min">min:</string>
    <string name="max">max:</string>
    <string name="filter">Filter</string>
    <string name="no_active_trips">No Active Trips</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="privacy_policy_agreement">By continuing, you agree to the privacy policy</string>
    <string name="my_trips">My Trips</string>
    <string name="organizers">Organizers</string>
    <string name="posts">Posts</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="general">General</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="show_result">Show Result</string>
    <string name="remember_me">Remember Me</string>
    <string name="details">Details</string>
    <string name="stops">Stops</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="last_day_to_book">Last Day To Book</string>
    <string name="road_map">RoadMap</string>
    <string name="rate_trip">Rate Trip</string>
    <string name="type">Type</string>
    <string name="passengers">Passengers</string>
    <string name="confirm">Confirm</string>
    <string name="english_language">English Language</string>
    <string name="trip_item_stops">Stops:</string>
    <string name="trip_item_date">Date:</string>
    <string name="trip_item_end_booking_date">End Booking Date:</string>
    <string name="trip_item_passengers">Passengers:</string>
    <string name="ask_logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="return_txt">Return</string>
    <string name="no">No</string>
    <string name="no_upcoming_trips">No Upcoming Trips</string>
    <string name="no_history">No History</string>
    <string name="promotion">Promotion</string>
    <string name="create_trip_post">Create Trip Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="end_booking_date">End Booking Date</string>
    <string name="price">Price</string>
    <string name="next">Next</string>
    <string name="select_image">Select Image</string>
    <string name="previous">Previous</string>
    <string name="create_post">Create Post</string>
    <string name="pick_place">Pick Place</string>
    <string name="pick_trip_type">Pick Trip Type</string>
    <string name="polls">Polls</string>
    <string name="places">Places</string>
    <string name="no_notifications">No Notifications</string>
    <string name="note">Note</string>
    <string name="send">Send</string>
    <string name="fill_promotion_info">Fill Promotion Info</string>
    <string name="pick_type">Pick Type</string>
    <string name="change_settings">Change Settings</string>
    <string name="total_">Total  :</string>
    <string name="confirmed">Confirmed</string>
    <string name="booking_for">Booking for: </string>
    <string name="attendance">Attendance</string>
    <string name="total">Total</string>
    <string name="checked">Checked</string>
    <string name="unchecked">Unchecked</string>
    <string name="poll">Poll</string>
    <string name="votes">Votes</string>
    <string name="votes_">Votes:</string>
    <string name="new_poll">New Poll</string>
    <string name="discard">Discard</string>
    <string name="options">Options</string>
    <string name="add">Add</string>
    <string name="publish">Publish</string>
    <string name="visit_current_place">Visit Current Place</string>
    <string name="rate">Rate</string>
    <string name="out_of_5" translatable="false">5/</string>
    <string name="submit">Submit</string>
    <string name="passenger">Passenger</string>
    <string name="following">Following</string>
    <string name="report">Report</string>
    <string name="reporting">Reporting</string>
    <string name="purpose_of_reporting">Purpose Of Reporting?</string>
    <string name="check_passengers">Check Passengers</string>
    <string name="suggestion">Suggestion</string>
    <string name="place_address">Place Address</string>
    <string name="place_description">Place Description</string>
    <string name="place_name_">Place Name:</string>
    <string name="place_name">Place Name</string>
    <string name="any">Any</string>
    <string name="error_connection">Error Connection</string>
    <string name="booking_canceled">Booking Canceled</string>
    <string name="poll_published">Poll Published!</string>
    <string name="reported">Reported</string>
    <string name="confirmed_">Confirmed!</string>
    <string name="done_">Done!</string>
    <string name="no_policy">No Privacy Policy</string>
    <string name="request_sent">Request Sent</string>
    <string name="no_image">No Image</string>
    <string name="id_photo_missing">ID photo is missing</string>
    <string name="required">Required</string>
    <string name="info_not_complete">Info not complete</string>
    <string name="suggested">Suggested</string>
    <string name="description_is_empty">Description is empty</string>
    <string name="title_is_empty">Title is empty</string>
    <string name="at_least_two">At least 2 options allowed</string>
    <string name="empty_option">An option is empty</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="select_photo_first">Select photo first</string>
    <string name="not_valid">Not Valid</string>
    <string name="ok">OK</string>
    <string name="greater_than_zero">Must be greater than 0</string>
    <string name="empty_start_date">Start date is empty</string>
    <string name="empty_end_date">End date is empty</string>
    <string name="empty_booking_date">Booking date is empty</string>
    <string name="date_or_time_not_valid">Trip date or time not valid</string>
    <string name="no_places_selected">No places selected</string>
    <string name="changes_submitted">Changes Submitted!</string>
    <string name="trip_began">Trip Began</string>
    <string name="trip_ended">Trip Ended</string>
    <string name="active_cap">ACTIVE</string>
    <string name="upcoming_cap">UPCOMING</string>
    <string name="history_cap">HISTORY</string>
    <string name="begin_trip">Begin Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="no_right_to_login">You don\'t have the right to login to this app</string>
    <string name="poll_title">Poll Title</string>
    <string name="what_is_this_poll_about">What is this poll about?</string>
    <string name="edit_successfully">Edit Successfully</string>
    <string name="delete_profile_image">delete_profile_image</string>
    <string name="cannot_delete_profile_image">can not delete profile image</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="there_are_no_places_to_show">There are no places to show</string>
    <string name="cant_be_deleted">This item can not be deleted</string>
    <string name="no_privacy_policy">There is no privacy police</string>
    <string name="contact_us_text">Hi We are a group of Young man who know to manage and organize trips if you would like to know more about our work or process feel free to get in touch</string>
    <string name="email_contact_inof">Email :</string>
    <string name="forget_password"><u>Forget Password</u></string>
    <string name="please_enter_your_verification_code_and_new_password">Please enter your verification code and new password</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="expired_date_not_selected">Expired Date not selected</string>

</resources>