<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:background="@drawable/rounded_shape"
    android:backgroundTint="@color/rose_200"
    android:clickable="true"
    android:focusable="true"
    android:elevation="@dimen/_10sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/dialog_gradient_orange"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:text="@string/bio_dialog"
        android:textColor="@color/off_white"
        android:textSize="@dimen/_18ssp" />

    <EditText
        android:id="@+id/bio_dialog_text_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_175sdp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="top"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:maxLength="150"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_16ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bio_dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:backgroundTint="@color/orange_700"
            android:fontFamily="@font/acme"
            android:text="@string/cancel"
            android:textColor="@color/off_white" />

        <Button
            android:id="@+id/bio_dialog_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:backgroundTint="@color/orange_700"
            android:fontFamily="@font/acme"
            android:text="@string/save"
            android:textColor="@color/off_white" />
    </LinearLayout>

</LinearLayout>