<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/profile_upper_layout_background"
    android:backgroundTint="@color/rose_500">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:padding="@dimen/_10sdp"
        android:text="@string/place_name_"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/filter_place_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:padding="@dimen/_10sdp"
        android:text="@string/filter_title"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/filter_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:padding="@dimen/_10sdp"
        android:text="@string/filter_price"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:text="@string/min"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/filter_min_price"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="number"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintEnd_toStartOf="@+id/textView27"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/acme"
        android:gravity="center_vertical"
        android:text="@string/max"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@+id/filter_min_price"
        app:layout_constraintEnd_toStartOf="@+id/filter_min_price"
        app:layout_constraintTop_toTopOf="@+id/filter_min_price" />

    <EditText
        android:id="@+id/filter_max_price"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="number"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:padding="@dimen/_10sdp"
        android:text="@string/filter_type"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Spinner
        android:id="@+id/filter_spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/filter_button"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/rounded_shape"
        android:fontFamily="@font/acme"
        android:text="@string/filter"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/_14ssp"
        app:backgroundTint="@color/off_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

</androidx.constraintlayout.widget.ConstraintLayout>