<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.fragments.auth.AuthFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/ic_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="Organizer's App "
        android:textColor="@color/orange_500"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Day Out"
        android:fontFamily="@font/acme"
        android:textColor="@color/orange_700"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rounded_shape"
        android:fontFamily="@font/acme"
        android:text="@string/change_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@color/orange_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/rounded_shape"
        app:backgroundTint="@color/orange_700"
        android:fontFamily="@font/acme"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:fontFamily="@font/acme"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:text="@string/sign_up"
        app:backgroundTint="@color/orange_700"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/promotion_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/acme"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:drawableLeft="@drawable/ic_promotion"
        android:paddingLeft="@dimen/_15sdp"
        android:text="@string/promotion"
        app:backgroundTint="@color/orange_700"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />


    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_weight="1"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/privacy_policy_agreement"
        android:textColor="@color/orange_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/privacy_policy_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/privacy_policy_underlined"
        android:textColor="@color/orange_700"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

</androidx.constraintlayout.widget.ConstraintLayout>