<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rose_200"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                app:cardElevation="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/off_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/pick_poll_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_clock"
                        android:backgroundTint="@color/orange_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView59"
                        app:layout_constraintHorizontal_bias="0.18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/textView59"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_7sdp"
                        android:fontFamily="@font/acme"
                        android:text="@string/new_poll"
                        android:textColor="@color/orange_500"
                        android:textSize="@dimen/_26ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/new_poll_discard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:fontFamily="@font/acme"
                        android:text="@string/discard"
                        android:textColor="@color/orange_500"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView59"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView59" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/acme"
                android:text="@string/title"
                android:textColor="@color/orange_500"
                android:textSize="@dimen/_16ssp" />

            <EditText
                android:id="@+id/new_poll_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/outline_rounded_shape"
                android:fontFamily="@font/acme"
                android:gravity="start|top"
                android:inputType="textPersonName"
                android:padding="@dimen/_5sdp"/>

            <View
                android:id="@+id/divider155"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/acme"
                android:text="@string/description"
                android:textColor="@color/orange_500"
                android:textSize="@dimen/_16ssp" />

            <EditText
                android:id="@+id/new_poll_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/outline_rounded_shape"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:gravity="start|top"
                android:hint="@string/what_is_this_poll_about"
                android:inputType="textMultiLine"
                android:padding="@dimen/_5sdp" />

            <View
                android:id="@+id/divider15"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/acme"
                android:text="@string/options"
                android:textColor="@color/orange_500"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:id="@+id/new_poll_options_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/new_poll_add_option_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/rounded_shape"
                android:backgroundTint="@color/orange_500"
                android:drawableLeft="@drawable/add_icon"
                android:fontFamily="@font/acme"
                android:textSize="@dimen/_12ssp"
                android:text="@string/add"
                android:textColor="@color/white" />

            <View
                android:id="@+id/divider14"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/new_poll_publish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_shape"
                android:backgroundTint="@color/orange_500"
                android:fontFamily="@font/acme"
                android:text="@string/publish"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/expired_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expired_date_not_selected"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_gravity="center"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/orange_500"
                android:fontFamily="@font/acme"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>